Funcioanlidad de cambio de cotraseña completada

--- a/src/app/authentication/changepassword/changepassword.component.html
+++ b/src/app/authentication/changepassword/changepassword.component.html
@@ -1,1 +1,52 @@
-<p>changepassword works!</p>
+<form [formGroup]="form" (ngSubmit)="btnSave($event)">
+    <div class="container-fluid" style="padding: 20px;">
+        <div class="row">
+            <div class="col-4">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">@</span>
+                    </div>
+                    <input formControlName="userName" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" maxlength="10">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">#</span>
+                    </div>
+                    <input formControlName="oldPassword" type="text" class="form-control" placeholder="Old Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">#</span>
+                    </div>
+                    <input formControlName="newPassword" type="text" class="form-control" placeholder="New Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">#</span>
+                    </div>
+                    <input formControlName="retypeNewPassword" type="text" class="form-control" placeholder="Retype new Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2">
+                <button class="btn btn-primary" type="submit">Save</button>
+            </div>
+            <div class="col-2">
+                <button class="btn btn-primary" routerLink="/auth/login">Back</button>
+            </div>
+        </div>
+    </div>    
+</form>
