--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,5 +1,4 @@
-
-<div class="container-fluid">
+<div class="container-fluid" style="padding: 20px;">
     <div class="row">
         <div class="col-4">
             <div class="input-group mb-3">
@@ -22,10 +21,10 @@
     </div>
     <div class="row">
         <div class="col-2">
-            <button class="btn btn-primary">Log In</button>
+            <button class="btn btn-primary" routerLink="/main/home">Log In</button>
         </div>
         <div class="col-2">
-            <button class="btn btn-primary">Change Password</button>
+            <button class="btn btn-primary" routerLink="/auth/changepassword" >Change Password</button>
         </div>
     </div>
 </div>
