--- a/src/app/authentication/footer/footer.component.html
+++ b/src/app/authentication/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<div class="container-fluid" style="background-color: grey; padding: 20px; color: white;">
+    <div class="row">
+        <div class="col-10">
+            Demo del curso de Simulacion de Sistemas distribuido
+        </div>
+        <div class="col-2">
+        </div>
+    </div>
+</div>
+
