--- a/src/app/authentication/header/header.component.html
+++ b/src/app/authentication/header/header.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid" style="background-color: red; padding: 20px; color: white;">
+<div class="container-fluid" style="background-color: white; padding: 20px; color: black;">
     <div class="row">
-        <div class="col-10">
-            Demo del curso de Simulacion de Sistemas distribuido
+        <div class="col-1">
+            <img src="https://www.upc.edu.pe/static/img/logo_upc_red.png" alt="logo" height="40px">
         </div>
-        <div class="col-2">
-
+        <div class="col-10">
+            <h4>Demo del curso de Simulacion de Sistemas distribuido</h4>
         </div>
     </div>
 </div>
