--- a/src/app/authentication/changepassword/changepassword.component.html
+++ b/src/app/authentication/changepassword/changepassword.component.html
@@ -26,7 +26,8 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">#</span>
                     </div>
-                    <input formControlName="newPassword" type="text" class="form-control" placeholder="New Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
+                    <input formControlName="newPassword" type="text" class="form-control" placeholder="New Password" aria-label="Password" aria-describedby="basic-addon1" type="password" [(ngModel)]="strNewPassword">
+                    {{strNewPassword}}
                 </div>
             </div>
         </div>
@@ -36,13 +37,14 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">#</span>
                     </div>
-                    <input formControlName="retypeNewPassword" type="text" class="form-control" placeholder="Retype new Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
+                    <input formControlName="retypeNewPassword" type="text" class="form-control" placeholder="Retype new Password" aria-label="Password" aria-describedby="basic-addon1" type="password" [(ngModel)]="strRetypePassword">
+                    {{strRetypePassword}}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-2">
-                <button class="btn btn-primary" type="submit">Save</button>
+                <button class="btn btn-primary" type="submit" [disabled]="strNewPassword !== strRetypePassword && strNewPassword === ''">Save</button>
             </div>
             <div class="col-2">
                 <button class="btn btn-primary" routerLink="/auth/login">Back</button>
