Se finalizo con la autenticacion del usuario y cambio de contraseña

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="row">
         <div class="col-3" *ngFor="let product of lstProducts">
-            <div class="row">
+            <!-- <div class="row">
                 {{product.id}}
             </div>
             <div class="row">
@@ -19,7 +19,7 @@
             </div>
             <div class="row">
                 {{product.price}}
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
