--- a/src/app/authentication/changepassword/changepassword.component.html
+++ b/src/app/authentication/changepassword/changepassword.component.html
@@ -1,5 +1,10 @@
 <form [formGroup]="form" (ngSubmit)="btnSave($event)">
     <div class="container-fluid" style="padding: 20px;">
+        <div class="row" style="color: red;" *ngIf="error">
+            <div class="col-12">
+                <p>{{errorMessage}}</p>
+            </div>
+        </div>
         <div class="row">
             <div class="col-4">
                 <div class="input-group mb-3">
@@ -27,7 +32,6 @@
                         <span class="input-group-text" id="basic-addon1">#</span>
                     </div>
                     <input formControlName="newPassword" type="text" class="form-control" placeholder="New Password" aria-label="Password" aria-describedby="basic-addon1" type="password" [(ngModel)]="strNewPassword">
-                    {{strNewPassword}}
                 </div>
             </div>
         </div>
@@ -38,13 +42,12 @@
                         <span class="input-group-text" id="basic-addon1">#</span>
                     </div>
                     <input formControlName="retypeNewPassword" type="text" class="form-control" placeholder="Retype new Password" aria-label="Password" aria-describedby="basic-addon1" type="password" [(ngModel)]="strRetypePassword">
-                    {{strRetypePassword}}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-2">
-                <button class="btn btn-primary" type="submit" [disabled]="strNewPassword !== strRetypePassword && strNewPassword === ''">Save</button>
+                <button class="btn btn-primary" type="submit" [disabled]="strNewPassword !== strRetypePassword || (strNewPassword === '' || strRetypePassword === '')">Save</button>
             </div>
             <div class="col-2">
                 <button class="btn btn-primary" routerLink="/auth/login">Back</button>
