--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,30 +1,37 @@
-<div class="container-fluid" style="padding: 20px;">
-    <div class="row">
-        <div class="col-4">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">@</span>
+<form [formGroup]="form" (ngSubmit)="btnLogin($event)">
+    <div class="container-fluid" style="padding: 20px;">
+        <div class="row" *ngIf="error" style="color: red;">
+            <div class="col-12">
+                <p>{{errorMessage}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">@</span>
+                    </div>
+                    <input formControlName="userName" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" maxlength="10">
                 </div>
-                <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" maxlength="10">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">#</span>
+                    </div>
+                    <input formControlName="password" type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2">
+                <button type="submit" class="btn btn-primary">Log In</button>
+            </div>
+            <div class="col-2">
+                <button class="btn btn-primary" routerLink="/auth/changepassword" >Change Password</button>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-4">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">#</span>
-                </div>
-                <input type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-2">
-            <button class="btn btn-primary" routerLink="/main/home">Log In</button>
-        </div>
-        <div class="col-2">
-            <button class="btn btn-primary" routerLink="/auth/changepassword" >Change Password</button>
-        </div>
-    </div>
-</div>
+</form>
