--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,12 +1,12 @@
 <form [formGroup]="form" (ngSubmit)="btnLogin($event)">
     <div class="container-fluid" style="padding: 20px;">
-        <div class="row" *ngIf="error" style="color: red;">
-            <div class="col-12">
+        <div class="row justify-content-center" *ngIf="error" style="color: red;">
+            <div class="col-4">
                 <p>{{errorMessage}}</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4">
+        <div class="row justify-content-center">
+            <div class="col-3">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">@</span>
@@ -15,8 +15,8 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4">
+        <div class="row justify-content-center">
+            <div class="col-3">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">#</span>
@@ -25,12 +25,15 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-2">
+        <div class="row justify-content-center">
+            <div class="col-1">
                 <button type="submit" class="btn btn-primary">Log In</button>
             </div>
             <div class="col-2">
                 <button class="btn btn-primary" routerLink="/auth/changepassword" >Change Password</button>
+            </div>
+            <div class="col-1">
+                <button class="btn btn-primary" routerLink="/auth/register" >Register</button>
             </div>
         </div>
     </div>
