--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -4,22 +4,28 @@
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Product description" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <div class="input-group-append">
-                  <button class="btn btn-primary" type="button" id="button-addon2">Buscar</button>
+                  <button class="btn btn-primary" type="button" id="button-addon2">Search</button>
                 </div>
               </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-3" *ngFor="let product of lstProducts">
-            <!-- <div class="row">
-                {{product.id}}
+        <div class="col-3" *ngFor="let product of products">
+            <div class="row">
+                <img [src]="product.image" width="220px" [title]="product.title">
+            </div>
+            <div class="row">
+                {{product.id | productCode}}
             </div>
             <div class="row">
                 {{product.description}}
             </div>
             <div class="row">
-                {{product.price}}
-            </div> -->
+                {{product.price | currency}}
+            </div>
+            <div class="row">
+                <button class="btn btn-primary"> Add Cart</button>
+            </div>
         </div>
     </div>
 </div>
