--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -1,4 +1,4 @@
-<app-header [userLogin]="userLogin"></app-header>
+<app-header></app-header>
 <div class="container-fluid" style="padding-top: 10px;">
     <router-outlet></router-outlet>
 </div>
