--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid" style="padding-top: 10px;">
-    <div class="row" style="background-color: grey;">
+<div class="container-fluid" style="background-color: grey; padding: 20px; color: white;">
+    <div class="row">
         <div class="col-1"></div>
         <div class="col-11" style="text-align: right;">
             Diseñado para la clase de Desarrollo de sistemas distribuidos© || {{year}} UPC
