--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -10,16 +10,16 @@
           <a class="nav-link" routerLink="/main">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cart</a>
+          <a class="nav-link" routerLink="/main/cart">Cart</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Configuration</a>
+          <a class="nav-link" routerLink="/maintenance">Maintenance</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/demo">Demo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" routerLink="/main/contact">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/main/logout">Logout</a>
