--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -21,7 +21,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">#</span>
                     </div>
-                    <input formControlName="password" type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
+                    <input formControlName="password" type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" type="password">
                 </div>
             </div>
         </div>
