--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container-fluid" style="padding-top: 10px;">
+<div class="container-fluid" style="padding-top: 10px; padding-bottom: 10px;">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
